2018-12-20 Massimo Manghi <mxmanghi@apache.org>
    * doc/: regenarating rivet.xml and adding new version for an example and
    several manual corrections

2018-12-20 Georgios Petasis <petasisg@apache.org>
    * cmake/CMakeLists.txt: Set policy behaviour of CMP0074, only if policy is
    defined (i.e. cmake version >= 3.12).

2018-12-19 Georgios Petasis <petasisg@apache.org>
    * cmake/CMakeLists.txt: Added support for regenerating pkgIndex.tcl in the
    installation directory of rivetlib, after files have been installed.
    This executes "tclsh".

2018-12-17 Massimo Manghi <mxmanghi@apache.org>
    * VERSION: moving version number to 3.1.1
    * mod_rivet.h: AP_USE_MODULE replicates what AP_DECLARE_DATA does 
      in mod_rivet.c but it isn't meant to stay in mod_rivet.h in the first 
      place
    * cmake/CMakeLists.txt: update to let it rely entirely on CMake to
    determine the version from VERSION (check out from master)
    * cmake/README.cmake: mergin updates done by Georgios Petasis in the
    master branch
    * .appveryor.yml: using Appveyor to check the window build

2018-12-04 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: now inferring version number from VERSION

2018-12-01 Massimo Manghi <mxmanghi@apache.org>
    * cmake/CMakeList.txt: Update version number to 3.1.0. We have
      to figure out how to keep it update automatically

2018-11-28 Massimo Manghi <mxmanghi@apache.org>
    * : Released as 3.1.0

2018-11-24 Massimo Manghi <mxmanghi@apache.org>
    * .gitignore: update .gitignore

2018-11-23 Massimo Manghi <mxmanghi@apache.org>
    * : code branched as branch 3.1
    * configure.ac,VERSION: bumping to version 3.1.0

2018-11-20 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: add const specifier to variable definition

2018-11-18 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: stripping the namespace in the commands
    implemented by Rivet_Var (fixes bug #62926)